--- a/src/pages/create.astro
+++ b/src/pages/create.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 import CreateFlow from "../components/CreateFlow";
 ---
 
-<Layout title="创建你的灵魂哈希 | Soul Hash">
+<Layout title="创建你的 Match Score | Match Score">
     <div class="w-full max-w-3xl mx-auto">
         <CreateFlow client:load />
     </div>
