--- a/src/pages/match.astro
+++ b/src/pages/match.astro
@@ -3,7 +3,7 @@ import Layout from "../layouts/Layout.astro";
 import MatchFlow from "../components/MatchFlow";
 ---
 
-<Layout title="匹配灵魂契合度 | Soul Hash">
+<Layout title="匹配灵魂契合度 | Match Score">
     <div class="w-full max-w-3xl mx-auto">
         <MatchFlow client:load />
     </div>
