--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,7 +28,7 @@ import Layout from "../layouts/Layout.astro";
             <p class="text-xl text-gray-600 mb-12 leading-relaxed font-light">
                 这不是普通的心理测试。<br />
                 我们将通过 50 个维度的深度扫描，<br />
-                计算你们灵魂的欧几里得距离。
+                计算你们灵魂的深度契合距离。
             </p>
 
             <div
